# carlo-benchmark

./: .gitignore  README.md  pyproject.toml
legacy/: Simulating_ODMR_multisets_Carlo_2023.py
scripts/: benchmark_algorithms.py  generate_dataset.py  run_complete_benchmark.py  run_double_correlation_demo.py  run_gui.py  run_multi_trace_gui.py  run_single_correlation_demo.py  single_trace_benchmark.py
src/odmr/: benchmark_config.py  benchmark_registry.py  project_defaults.py  simulation.py
src/odmr/algorithms/: common.py  double_correlation.py  double_mle.py  lmfit_double.py  lmfit_single_side.py  paper_ca.py  single_correlation.py
src/odmr/gui/: __init__.py  app.py  multi_trace_app.py
