[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odmr-benchmark"
version = "0.1.0"
description = "Simulation, benchmarking, and PyTorch modeling for ODMR spectra."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "tqdm",
    "lmfit"
]

[project.optional-dependencies]
ml = ["torch"]
gui = ["PySide6"]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]